--- a/Carohr.html
+++ b/Carohr.html
@@ -260,7 +260,7 @@ to {
                  <!-- #000314 <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a> -->
                  </div>
 		 <br>
-		 <br>
+		 
 	<!--	 <p class="lead" style="margin-bottom:0rem">You're here to help a couple of guys get to outer space.</p> -->
 	    </div>    
         </header>
@@ -379,7 +379,7 @@ to {
                 </div>
             </div>
 			<br>
-			<br>
+			
 		
 <!--	    <div class="container px-4 text-center" style="padding-top:2rem"> -->
             <div class="container px-4 text-center">
@@ -403,7 +403,7 @@ to {
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
                     </div>
                   <!--  <div class="reveal1 col-lg-4" style="padding-bottom: 2rem" type="button" data-bs-toggle="collapse" data-bs-target="#themyth" aria-expanded="false" aria-controls="themyth">
-                    --> <div class="reveal1 col-lg-4" style="padding-top: 5rem" type="button" data-bs-toggle="collapse" data-bs-target="#themyth" aria-expanded="false" aria-controls="themyth">
+                    --> <div class="reveal1 col-lg-4" style="padding-top: 4rem" type="button" data-bs-toggle="collapse" data-bs-target="#themyth" aria-expanded="false" aria-controls="themyth">
                        
 			    <div style="position:relative; height:140px; padding-bottom: 10rem">
 						    <svg style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(10px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
@@ -425,7 +425,7 @@ to {
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
                     </div>
                  <!--   <div class="reveal2 col-lg-4" style="padding-bottom: 2rem" type="button" data-bs-toggle="collapse" data-bs-target="#thelegend" aria-expanded="false" aria-controls="thelegend">
-                   --> <div class="reveal2 col-lg-4" style="margin-bottom: 5rem !important; padding-top: 5rem" type="button" data-bs-toggle="collapse" data-bs-target="#thelegend" aria-expanded="false" aria-controls="thelegend">
+                   --> <div class="reveal2 col-lg-4" style="margin-bottom: 1rem !important; padding-top: 5rem" type="button" data-bs-toggle="collapse" data-bs-target="#thelegend" aria-expanded="false" aria-controls="thelegend">
                        
 			    <div style="position:relative; height:140px; padding-bottom: 10rem">
 						    <svg style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(45px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
@@ -451,7 +451,7 @@ to {
 	    <div class="container px-4">
                 <div class="row">
                     <div class="reveal">
-			<h2 class="pb-2 border-bottom" style="padding-top: 8rem; color:white">The Rewards</h2>
+			<h2 class="pb-2 border-bottom" style="padding-top: 4rem; color:white">The Rewards</h2>
                     </div>
                 </div>
             </div>
@@ -775,7 +775,7 @@ to {
 	
 	
 	
-<div type="button" data-bs-toggle="modal" data-bs-target="#crocol">
+<div type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle">
     <img style="position: fixed; top: 0; right: 0; border: 0;" src="forkme_right_darkblue_121622.png" alt="Donate with Crypto">
   </div>
 
@@ -809,6 +809,83 @@ to {
     </div>
   </div>
 </div>	
+	
+	
+<!-- Crypto Modal2 -->
+<div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalToggleLabel">You're the BEST!</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        How do you want to donate?
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Bitcoin</button>
+		<button class="btn btn-primary" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal">Ethereum</button>
+		<button class="btn btn-primary" data-bs-target="#exampleModalToggle4" data-bs-toggle="modal">Other</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">MoonShoot BTC Wallet</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Only send BTC to this address.
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="exampleModalToggle3" aria-hidden="true" aria-labelledby="exampleModalToggleLabel3" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalToggleLabel3">MoonShoot ETH Wallet</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="card" style="align-items: center">
+  <img src="ethwal.png" style="width: 18rem" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Only send ETH to this address.</p>
+  </div>
+</div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="exampleModalToggle4" aria-hidden="true" aria-labelledby="exampleModalToggleLabel4" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalToggleLabel4">MoonShoot Wallet</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Hit us up and let us know what you got!
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 	
 	
