--- a/carohr.html
+++ b/carohr.html
@@ -449,7 +449,7 @@ to {
 	    <div class="container px-4">
                 <div class="row">
                     <div class="reveal">
-			<h2 class="pb-2 border-bottom" style="padding-top: 4rem; color:white">The Rewards</h2>
+			<h2 class="pb-2 border-bottom" style="padding-top: 4rem; color:#0d6efd !important">The Rewards</h2>
                     </div>
                 </div>
             </div>
@@ -478,7 +478,7 @@ to {
 
     <div class="reveal row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">T-Shirts <span class="text-body-secondary" style="color:#0d6efd !important">$25</span></h2>
+        <h2 class="featurette-heading fw-normal lh-1">T-Shirts <span class="text-body-secondary" style="color:#0d6efd !important"></span></h2>
         <p class="lead">Black / White ~ All Sizes Available</p>
       </div>
 	    
@@ -495,7 +495,7 @@ to {
 
     <div class="reveal row featurette">
       <div class="col-md-7 order-md-2" style="text-align: right">
-        <h2 class="featurette-heading fw-normal lh-1">Stickers & Magnets <span class="text-body-secondary" style="color:#0d6efd !important">$5</span></h2>
+        <h2 class="featurette-heading fw-normal lh-1">Stickers & Magnets <span class="text-body-secondary" style="color:#0d6efd !important"></span></h2>
         <p class="lead">3"x 3" ~ Custom Sizes Also Available</p>
       </div>
  <div class="col-md-5">
