--- a/carohr.html
+++ b/carohr.html
@@ -281,13 +281,13 @@ to {
 <!-- Phase1 Modal -->
 <div class="modal fade" id="P1M" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content" style="background-color:#FFF8E7">
+    <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color:black">Help Us Get To Outer Space</h1>
+        <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color:white">Fund Raise</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body" style="color:black">
-        With our diverse line of products and investments, every dollar we make gets us one step closer to that giant leap.
+      <div class="modal-body" style="color:white">
+        Help Us Get To Outer Space! Donate, get some swag, mint and NFT, come to a party! Every dollar we make gets us one step closer to that giant leap.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -300,13 +300,13 @@ to {
 <!-- Phase2 Modal -->
 <div class="modal fade" id="P2M" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content" style="background-color:#FFF8E7">
+    <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color:black">Help Us Get To Outer Space</h1>
+        <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color:white">Invest</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body" style="color:black">
-        With our diverse line of products and investments, every dollar we make gets us one step closer to that giant leap.
+      <div class="modal-body" style="color:white">
+        We'll use the rasied capital to investment in a diverse range of instuments including land development and Web3 projects.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -320,13 +320,13 @@ to {
 <!-- Phase3 Modal -->
 <div class="modal fade" id="P3M" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content" style="background-color:#FFF8E7">
+    <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color:black">Help Us Get To Outer Space</h1>
+        <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color:white">Cash Out</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body" style="color:black">
-        With our diverse line of products and investments, every dollar we make gets us one step closer to that giant leap.
+      <div class="modal-body" style="color:white">
+        It's likely close to 100% of all funds rasied will need to be liquidated to afford the tickets. That's the plan.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -393,7 +393,7 @@ to {
 			</div>
 			<h2 class="fw-normal">The Man</h2>
                         <p style="margin-bottom:0rem !important">Some representative placeholder content for the first column.</p>
-			    <div class="collapse" id="theman">
+			    <div class="collapse" id="theman" style="margin-top:1rem">
   <div class="card card-body">
     Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
   </div>
@@ -414,7 +414,7 @@ to {
 					    </div>
                         <h2 class="fw-normal">The Myth</h2>
                         <p style="margin-bottom:0rem !important">Representative placeholder content for the second column.</p>
-			    <div class="collapse" id="themyth">
+			    <div class="collapse" id="themyth" style="margin-top:1rem">
   <div class="card card-body">
     Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
   </div>
@@ -436,7 +436,7 @@ to {
 					    </div>
                         <h2 class="fw-normal">The Legend</h2>
                         <p style="margin-bottom:0rem !important">And lastly this, the third column of representative placeholder content.</p>
-			    			    <div class="collapse" id="thelegend">
+			    			    <div class="collapse" id="thelegend" style="margin-top:1rem">
   <div class="card card-body">
     Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
   </div>
