--- a/carohr.html
+++ b/carohr.html
@@ -299,7 +299,15 @@ to {
   background-color: #bbb;
   transform: translateZ(calc(var(--size) * -.5));
 }
-
+:root * {
+  /* Pause the animation */
+  animation-play-state: paused;
+  /* Bind the animation to scroll */
+  animation-delay: calc(var(--scroll) * -1s);
+  /* These last 2 properites clean up overshoot weirdness */
+  animation-iteration-count: 2;
+  animation-fill-mode: both;
+}
 	
     
     </style>
