--- a/carohr.html
+++ b/carohr.html
@@ -249,11 +249,12 @@ to {
   --size: 30vmin;
   position: fixed;
  /* position: relative; */
-  top: 50%;
-  left: 50%;
+  top: 20%;
+  left: 10%;
   width: 0;
   height: 0;
   perspective: 100vmin;
+  opacity: 0.2;
 }
 .cube {
   transform-style: preserve-3d;
