--- a/carohr.html
+++ b/carohr.html
@@ -362,11 +362,11 @@ to {
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" style="color:white">
-        Help Us Get To Outer Space! Donate, get some swag, mint and NFT, come to a party! Every dollar we make gets us one step closer to that giant leap.
+        Help Us Get To Outer Space! Every dollar we make gets us one step closer to that giant leap. <br> Donate any amount now and we'll send you some branded goodies in return. Then hold tight for our upcoming NFT release, complete with all-acess pass to our next big event! 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Understood</button>
+        <button type="button" class="btn btn-secondary">Learn More</button>
+        <button type="button" class="btn btn-primary">Donate Now</button>
       </div>
     </div>
   </div>
@@ -381,11 +381,11 @@ to {
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" style="color:white">
-        We'll use the rasied capital to investment in a diverse range of instuments including land development and Web3 projects.
+        We'll use all the rasied capital to investment in real estate, Web3 projects, etc.
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Understood</button>
+        <button type="button" class="btn btn-secondary">Learn More</button>
+        <button type="button" class="btn btn-primary">Donate Now</button>
       </div>
     </div>
   </div>
@@ -401,11 +401,11 @@ to {
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" style="color:white">
-        It's likely close to 100% of all funds rasied will need to be liquidated to afford the tickets. That's the plan.
+        Flights to space aint gonna be cheap. It's quite likely all funds rasied will need to be liquidated to afford the tickets. So that's the plan!
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Understood</button>
+        <button type="button" class="btn btn-secondary">Learn More</button>
+        <button type="button" class="btn btn-primary">Donate Now</button>
       </div>
     </div>
   </div>
@@ -419,7 +419,7 @@ to {
             <div class="reveal col">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#P1M" class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space5.png');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 1</h3>
+                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 1</h3> <div style="height:10rem"></div>
                     </div>
                 </div>
             </div>
@@ -428,7 +428,7 @@ to {
                 <div type="button" data-bs-toggle="modal" data-bs-target="#P2M" class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space7.png');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 2</h3> 
-		  <!-- <div style="height:10rem"></div> -->
+		  <div style="height:10rem"></div>
           </div>
         </div>
       </div>
@@ -436,7 +436,7 @@ to {
       <div class="reveal2 col">
         <div type="button" data-bs-toggle="modal" data-bs-target="#P3M" class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space8.png');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1" style="border-color: white; border-block-width: 0.1px; border-style: solid">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 3</h3>
+            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 3</h3> <div style="height:10rem"></div>
           </div>
         </div>
       </div>
