--- a/carohr.html
+++ b/carohr.html
@@ -358,11 +358,11 @@ to {
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color:white">Fund Raise</h1>
+        <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color:white">Fundraise</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" style="color:white">
-        Help Us Get To Outer Space! Every dollar we make gets us one step closer to that giant leap. <br> Donate any amount now and we'll send you some branded goodies in return. Then hold tight for our upcoming NFT release, complete with all-acess pass to our next big event! 
+        Help Us Get To Outer Space! Every dollar we make gets us one step closer to that giant leap. <br><br> Donate any amount now and we'll send you some branded goodies in return. Then hold tight for our upcoming NFT release, complete with all-acess pass to our next big event! 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary">Learn More</button>
@@ -525,7 +525,7 @@ to {
 	    <div class="container px-4">
                 <div class="row">
                     <div class="reveal">
-			<h2 class="pb-2 border-bottom" style="padding-top: 4rem; color:#0d6efd !important">The Rewards</h2>
+			<h2 class="pb-2 border-bottom" style="padding-top: 4rem; color:#0d6efd !important">The Goodies</h2>
                     </div>
                 </div>
             </div>
