--- a/carohr.html
+++ b/carohr.html
@@ -294,7 +294,7 @@ to {
 }
 .front {
  /* background-color: #aaa; */
-	 background-image: url('buffer.png') !important;
+	 background-image: url('Buffer.png') !important;
   background-repeat: no-repeat !important;
   background-size: contain !important;
   background-position: center !important;
@@ -302,7 +302,7 @@ to {
 }
 .back {
   /* background-color: #bbb; */
-	 background-image: url('buffer.png') !important;
+	 background-image: url('Buffer.png') !important;
   background-repeat: no-repeat !important;
   background-size: contain !important;
   background-position: center !important;
