--- a/carohr.html
+++ b/carohr.html
@@ -302,7 +302,7 @@ to {
 }
 .back {
   /* background-color: #bbb; */
-	 background-image: url('rBuffer.png') !important;
+	 background-image: url('rbBuffer.png') !important;
   background-repeat: no-repeat !important;
   background-size: contain !important;
   background-position: center !important;
@@ -413,7 +413,7 @@ to {
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary">Learn More</button>
-        <button type="button" class="btn btn-primary">Donate Now</button>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalToggle">Donate Now</button>
       </div>
     </div>
   </div>
@@ -857,10 +857,10 @@ to {
 	</a> 	
 	-->
 	
-	
+<!--	
 <div type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle">
     <img style="position: fixed; top: 0; right: 0; border: 0;" src="forkme_right_darkblue_121622.png" alt="Donate with Crypto">
-  </div>
+  </div> -->
 
 
 
